<resources>
    <string name="app_name">INTECH</string>
    <string name="news_title">News Title</string>
    <string name="news_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum diam tortor, placerat accumsan diam et, lobortis posuere dui. Vivamus vel ornare ligula, sit amet lobortis turpis. Pellentesque enim quam, hendrerit sit amet leo sed, condimentum vulputate nibh. Maecenas quis tortor diam. Nunc convallis tellus mi, eget mollis nunc feugiat sit amet. Praesent tristique eu elit in vestibulum. Phasellus sagittis euismod erat, in porta justo varius nec. Integer hendrerit varius varius. In lobortis lobortis mauris vel vulputate. Morbi dapibus erat eget maximus rhoncus. Etiam arcu est, aliquam ut quam quis, rhoncus sagittis orci. Nullam dignissim placerat purus, vitae feugiat ipsum molestie id. Pellentesque dapibus nulla eget dui viverra, vitae mattis sapien dictum. Maecenas neque magna, tristique vel lectus ac, pretium finibus felis.

Fusce euismod efficitur accumsan. Aliquam id risus id turpis ullamcorper facilisis. Integer felis eros, facilisis nec libero sed, euismod egestas nulla. Aliquam eget nisi varius, aliquam nunc sed, ornare nisi. Vestibulum lacinia vulputate laoreet. Vestibulum sodales risus gravida leo consequat, ut blandit ex congue. Donec eleifend molestie libero, at elementum erat lobortis eu. Praesent id velit vel arcu gravida vehicula. Nam a accumsan nisi, id ullamcorper enim. Curabitur maximus dictum felis quis rhoncus. Praesent id dolor placerat, ultrices libero at, rhoncus risus. Morbi imperdiet condimentum turpis, a semper risus pellentesque id. Etiam ultricies lectus ut velit ornare tincidunt. Integer sit amet dolor scelerisque, sagittis turpis nec, dapibus sapien.

Nam in placerat diam, ut facilisis tortor. Aenean ornare enim at sapien mattis ultrices. Curabitur libero felis, tempor non tortor nec, euismod consequat mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec dapibus lobortis nisi, non accumsan libero finibus at. Suspendisse felis neque, consectetur quis venenatis vehicula, tincidunt in leo. Praesent luctus blandit nulla. Ut convallis purus ut scelerisque maximus. Nam non sem velit.

Integer sit amet eros et urna feugiat lacinia. Aliquam sit amet leo in tortor ultricies tempor vel at dui. Quisque nec finibus magna, vel bibendum massa. Curabitur at consequat neque. Pellentesque tristique felis lacus, non imperdiet nisi ultrices quis. Nullam sed sapien accumsan, egestas erat nec, laoreet mauris. Nam tincidunt sagittis lorem viverra laoreet. Maecenas iaculis tristique odio ut lobortis. Suspendisse auctor, erat rutrum venenatis congue, mauris nulla congue nisl, sed lacinia velit turpis sed lectus. Cras rutrum at lorem non sodales. Nam luctus urna sit amet nisl porta, eget egestas sapien cursus. Duis sed odio magna. Donec pretium ornare erat non ornare. Aliquam erat volutpat. Nulla congue elementum mollis.

Nulla orci nibh, mollis ac erat in, pretium fringilla turpis. Praesent eu enim fermentum, consectetur sem ut, mollis massa. Sed ac magna massa. Vestibulum dictum faucibus ligula, ut sodales nibh gravida eget. Nunc non elementum dolor. Duis ut libero rhoncus tortor ultrices lobortis. Fusce magna turpis, efficitur in sapien in, pulvinar faucibus augue. Proin neque felis, elementum at facilisis et, gravida a leo. Proin convallis interdum pellentesque. Aenean viverra dictum orci, nec pulvinar arcu vestibulum sed. Nullam scelerisque placerat molestie. Ut commodo tristique mauris sed elementum. Vestibulum eros erat, ultrices eget purus vel, consequat blandit massa. Curabitur porta orci felis, eu pellentesque est condimentum at.</string>
    <string name="news_date_author">Thusrday, 17 September 2021 - Andre Suryana</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="email">name@email.com</string>
    <string name="go_back">Go Back</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="news_picture">News Picture</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">Linkedin</string>
    <string name="github">Github</string>
</resources>