<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_news_picture"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center_vertical"
        android:src="@drawable/sample_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/news_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_news_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/news_description"
            android:textSize="12sp"/>


        <TextView
            android:id="@+id/tv_news_date_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_date_author"
            android:textSize="11sp"/>

    </LinearLayout>

</LinearLayout>